# cimonitor

./: .coverage  .gitignore  .mise.toml  CHANGELOG.md  README.md  ci_logs.py  mise.toml  pyproject.toml
.claude/commands/: submit.md  update.md
.github/workflows/: test.yml
cimonitor/: cli.py  constants.py  fetcher.py  log_parser.py  services.py
github_ci_fetcher/: __init__.py  cli.py  fetcher.py  log_parser.py
scripts/: poll_ci_status.py
src/github_ci_fetcher/: __init__.py
tests/: test_cli_refactored.py  test_error_handling.py  test_failing.py  test_fetcher.py  test_log_parser.py  test_repo_functionality.py  test_target_resolution.py  test_time_based.py  test_url_parsing.py
