[project]
name = "github-ci-fetcher"
version = "0.1.0"
description = "Tool to fetch and display GitHub CI logs for failing builds"
readme = "README.md"
authors = [
    { name = "Steve Landey", email = "steve@steveasleep.com" }
]
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.1",
    "gitpython>=3.1.44",
    "requests>=2.32.4",
]

[project.scripts]
ci-logs = "github_ci_fetcher.cli:main"

[project.optional-dependencies]
dev = [
    "ruff>=0.7.0",
    "pytest>=8.0.0",
    "pre-commit>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long, handled by formatter
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
